# zero_deep_learning

./: 01_practice.py  Makefile  main.py  pyproject.toml
layer/: ch04_two_layer_net.py
