[tool.poetry]
name = "zero_deep_learning"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
# この書き方をしないとnumpyが入らない
# これだとダメ
# python = "^3.9"
# https://amagaeru1123.hatenablog.jp/entry/2020/12/15/212014
python = ">=3.9,<3.11"
numpy = "^1.21.2"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
